--- a/index.Rmd
+++ b/index.Rmd
@@ -12,8 +12,8 @@ documentclass: book
 bibliography: [book.bib]
 biblio-style: apalike
 link-citations: yes
-github-repo: seankross/the_unix_workbench
-url: 'https\://github.com/seankross/the_unix_workbench'
+github-repo: seankross/the-unix-workbench
+url: 'https\://github.com/seankross/the-unix-workbench'
 description: ""
 ---
 
@@ -23,11 +23,14 @@ Software can't be mined out of the ground, nor can software seeds be planted in
 spring to harvest by autumn. Software isn't produced in factories on an
 assembly line. Software is a hand-made, often bespoke good. If a software
 developer is an artisan, then Unix is their workbench. Unix provides an
-essential and simple set of tools in a distraction-free environment. My goal
+essential and simple set of tools in a distraction-free environment. Even if
+you're not a software developer learning Unix can open you up to new methods
+of thinking and novel ways to scale your ideas. My goal
 for this book is to help you get started with Unix by writing the book I would
 have wanted when I was first learning Unix. If you have any additions,
 corrections, or comments for this book please open an issue or send a pull
-request to: https://github.com/seankross/the_unix_workbench
+request to: https://github.com/seankross/the-unix-workbench. If you're unsure
+what a pull request is you'll find out in this book!
 
 **Cover Image**
 
