--- a/03-Command-Line-Basics.Rmd
+++ b/03-Command-Line-Basics.Rmd
@@ -2,7 +2,7 @@
 
 ## Hello Terminal!
 
-Once you have opened up Terminal or Git Bash then you should see a window that 
+Once you have opened up Terminal then you should see a window that 
 looks something like this:
 
 ![](img/shell1.png)
@@ -54,6 +54,20 @@ command the console output of the command will appear (if there is any
 console output). You can use `echo` to print any phase surrounded by double
 quotes (`""`) to the console.
 
+If you want to see the last command press the `Up` arrow key. You can press
+`Up` and `Down` in order to scroll through the history of commands that you've
+entered. If you want to re-execute a past command, you can scroll to that
+command then press `Enter`. Try getting back to the `echo "Hello World!"`
+command and execute it again.
+
+### Summary
+
+- You type command line commands after the prompt.
+- `clear` will clean up your terminal.
+- `echo` prints text to your terminal.
+- You can scroll through your command history with the `Up` and `Down` arrow
+keys.
+
 ### Exercises
 
 1. Print your name to the terminal.
@@ -100,7 +114,7 @@ path from a hypothetical root directory to the home directory.
 
 This path can be written as `/Users/sean`.
 
-Open the command line if you closed it (either **Terminal** or **Git Bash**).
+Open the command line if you closed it.
 Your shell starts in your home directory. Whatever directory your shell is in
 is called the **working directory**. Enter the `pwd` command into your shell
 to **p**rint the **w**orking **d**irectory.
@@ -198,7 +212,7 @@ pwd
 ## /Users/sean/Music
 ```
 
-It doesn't matter what directory I'm in since I'm using a absolue path, I can
+It doesn't matter what directory I'm in since I'm using an absolute path, I can
 jump straight to that directory (Remember that `~` is a shortcut for the path to
 your home folder). Of course you shouldn't expect yourself to have every
 absolute path on your computer memorized! You can use a terminal feature called
@@ -243,6 +257,16 @@ will list all of the files and folders on my desktop.
 Make sure to pause and try this yourself in your own terminal! You won't have
 the same files or folders that I do, but you should try using `cd` and tab 
 completion with directories and files that start with the same letters.
+
+### Summary
+
+- You can identify a specific file or folder by its path.
+- The root directory (`/`) contains all of the folders and files on your
+computer.
+- Your home directory (`~`) is the directory where your terminal always starts.
+- Use the `cd` command to **c**hange your working **d**irectory.
+- The `pwd` command will **p**rint the **w**orking **d**irectory.
+- The `ls` command will **l**i**s**t files and folders in a directory.
 
 ### Exercises
 
@@ -345,7 +369,7 @@ characters following the `d` in the case of a directory or following the first
 `-` in the case of a file represent the permissions for that file or directory.
 We'll cover permissions in a later section. The columns of this table also show
 who created the file, the group that the creator of the file belongs to (we'll
-cover grouos later when we cover permissions), the size of the file, the time
+cover groups later when we cover permissions), the size of the file, the time
 and date when the file was last modified, and then finally the name of the file.
 
 Now that we've created a file there are a few different ways that we can inspect
@@ -391,7 +415,9 @@ cat todo.txt todo.txt
 ## - get groceries for Shabbat
 ```
 
-Let's take a look at how we could view a larger file. Let's take a look inside
+The `cat` command will combine every text file that is provided as an argument.
+
+Let's take a look at how we could view a larger file. There's a file inside
 the Documents directory:
 
 ```{r, engine='bash', eval=FALSE}
@@ -447,8 +473,64 @@ As you can see the `less` program is a kind of Unix tool with behavior that we
 haven't seen before because it "takes over" your terminal. There are a few
 programs like this that we'll discuss throughout this book.
 
+There are also two easy to remember programs for glimpsing the beginning or end
+of a text file: `head` and `tail`. Let's quickly use `head` and `tail` on
+`a-tale-of-two-cities.txt`:
+
+```{r, engine='bash', eval=FALSE}
+head Documents/a-tale-of-two-cities.txt
+```
+
+```
+## I. The Period
+## 
+## It was the best of times,
+## it was the worst of times,
+## it was the age of wisdom,
+## it was the age of foolishness,
+## it was the epoch of belief,
+## it was the epoch of incredulity,
+## it was the season of Light,
+## it was the season of Darkness,
+```
+
+As you can see `head` prints the first ten lines of the file to the terminal.
+You can specify the number of lines printed with the `-n` option followed by
+the number of lines you'd like to see:
+
+```{r, engine='bash', eval=FALSE}
+head -n 4 Documents/a-tale-of-two-cities.txt
+```
+
+```
+## I. The Period
+## 
+## It was the best of times,
+## it was the worst of times,
+```
+
+The `tail` program works exactly the same way:
+
+```{r, engine='bash', eval=FALSE}
+tail Documents/a-tale-of-two-cities.txt
+```
+
+```
+of an atrocious murderer, and to-morrow of a wretched pilferer who had robbed a
+farmer’s boy of sixpence.
+All these things, and a thousand like them, came to pass in and close upon the
+dear old year one thousand seven hundred and seventy-five. Environed by them,
+while the Woodman and the Farmer worked unheeded, those two of the large jaws,
+and those other two of the plain and the fair faces, trod with stir enough,
+and carried their divine rights with a high hand. Thus did the year one
+thousand seven hundred and seventy-five conduct their Greatnesses, and myriads
+of small creatures—the creatures of this chronicle among the rest—along the
+roads that lay before them.
+```
+
 We've now gone over a few tools for inspecting files, folders, and their
-contents including `ls`, `wc`, `cat`, and `less`. Before the end of this section
+contents including `ls`, `wc`, `cat`, `less`, `head`, and `tail`. Before the 
+end of this section
 we should discuss a few more techniques for creating and also editing files. One
 easy way to create a file is using **output redirection**. Output redirection
 stores text that would be normally printed to the command line in a text file.
@@ -458,11 +540,14 @@ from the proceeding command. Let's try an example using `echo`:
 
 ```{r, engine='bash', eval=FALSE}
 echo "I'm in the terminal."
-echo "I'm in the file." > echo-out.txt
 ```
 
 ```
 ## I'm in the terminal.
+```
+
+```{r, engine='bash', eval=FALSE}
+echo "I'm in the file." > echo-out.txt
 ```
 
 Only the first command printed output to the terminal. Let's see if the second
@@ -521,14 +606,326 @@ cat echo-out.txt
 Unfortunately I have unintentionally overwritten what was already contained in
 `echo-out.txt`. There's no undo button in Unix so I'll have to live with this
 mistake. This is the first of several lessons demonstrating the damage that you
-should avoid inflicting with Unix.
+should try to avoid inflicting with Unix. Make sure to take extra care when
+executing commands that can modify or delete a file, a typo in the command can
+be potentially devastating. Thankfully there are a few strategies for protecting
+yourself from mistakes, including managing permissions for files, and tracking
+versions of your files with Git, which we will discuss thoroughly in a later
+chapter.
 
-- be careful before you execute a command
-- we'll learn later how to protect yourself and how to go back/undo (with git)
+Finally we should discuss how to edit text files. There are several file editors
+that are available for your terminal including 
+[`vim`](https://en.wikipedia.org/wiki/Vim_(text_editor)) 
+and [`emacs`](https://en.wikipedia.org/wiki/Emacs). Entire books have been
+written about how to use both of these text editors, and if you're interested
+in one of them you should look for resources online about how to use them. The
+one text editor we will discuss using is called `nano`. Just like `less`, `nano`
+uses your entire terminal window. Let's edit `todo.txt` using `nano`:
+
+```{r, engine='bash', eval=FALSE}
+nano todo.txt
+```
+
+```
+  GNU nano 2.0.6                File: todo.txt
+
+- email Jeff
+- write letter to Aunt Marie
+- get groceries for Shabbat
+
+
+
+^G Get Help   ^O WriteOut   ^R Read File  ^Y Prev Page  ^K Cut Text   ^C Cur Pos
+^X Exit       ^J Justify    ^W Where Is   ^V Next Page  ^U UnCut Text ^T To Spell
+```
+
+Once you've started `nano` you can start editing the text file. The top line of
+the `nano` editor shows the file you're currently working on, and the bottom two
+lines show a few commands that you can use in `nano`. The carrot character (`^`)
+represents the `Control` key on your keyboard, so you can for example type
+`Control` + `O` in order to save the changes you've made to the text file, or
+`Control` + `X` in order to exit `nano` and go back to the prompt. 
+
+`nano` is a good editor for beginners because it works similarly to word 
+processors you've used before. You can use the arrow keys in order to move your
+cursor around the file, and the rest of the keys on your keyboard work as
+expected. Let's add an item to my todo list and then I'll save and exit `nano`
+by typing `Control` + `O` followed by `Control` + `X`.
+
+```
+  GNU nano 2.0.6                File: todo.txt
+
+- email Jeff
+- write letter to Aunt Marie
+- get groceries for Shabbat
+- write final section of "command line basics"
+
+
+^G Get Help   ^O WriteOut   ^R Read File  ^Y Prev Page  ^K Cut Text   ^C Cur Pos
+^X Exit       ^J Justify    ^W Where Is   ^V Next Page  ^U UnCut Text ^T To Spell
+```
+
+Now let's quickly check if those changes were saved correctly:
+
+```{r, engine='bash', eval=FALSE}
+cat todo.txt
+```
+
+```
+## - email Jeff
+## - write letter to Aunt Marie
+## - get groceries for Shabbat
+## - write final section of "command line basics"
+```
+
+You can also create new text files with `nano`. Instead of using an existing
+path to a file as the argument to `nano`, use a path to a file that does not
+yet exist and then save your changes to that file.
+
+### Summary
+
+- Use `mkdir` to create new directories.
+- The `touch` command creates empty files.
+- You can use `>` to redirect the output of a command into a file.
+- `>>` will append command output to the end of a file.
+- Print a text file to the commdna line using `cat`.
+- Inspect properties of a text file with `wc`.
+- Peak at the beginning and end of a text file with `head` and `tail`.
+- Scroll through a large text file with `less`.
+- `nano` is simple text editor.
 
 ### Exercises
 
-1. Create and remove the same directory using three different path arguments.
-2. Create, move, and remove a file.
+1. Create a new directory called `workbench` in your home directory.
+2. Without changing directories create a file called `readme.txt` inside of 
+`workbench`.
+3. Append the numbers 1, 2, and 3 to `readme.txt` so that each number appears on
+it's own line.
+4. Print `readme.txt` to the command line.
+5. Use output redirection to create a new file in the `workbench` directory called 
+`list.txt` which lists the files and folders in your home directory.
+6. Find out how many characters are in `list.txt` without opening the file or
+printing it to the command line.
 
 ## Migration and Destruction
+
+In this section we'll discuss moving, renaming, copying, and deleting files and
+folders. First let's revisit the contents of our current working directory:
+
+```{r, engine='bash', eval=FALSE}
+ls
+```
+
+```
+Code
+Documents
+Photos
+Desktop
+Music
+echo-out.txt
+journal-2017-01-24.txt
+todo.txt
+```
+
+It's gotten a little sloppy, so let's clean this directory up. First I want to
+make a new directory to store all of my journal entires in called `Journal`. We
+already know how to do that:
+
+```{r, engine='bash', eval=FALSE}
+mkdir Journal
+```
+
+Now I want to move my journal entry `journal-2017-01-24.txt` into the `Journal`
+directory. We can **m**o**v**e it using the `mv` command. `mv` takes two
+arguments: first the path to the file or folder that you wish to move followed
+by the destination folder. Let's try using `mv` now:
+
+```{r, engine='bash', eval=FALSE}
+mv journal-2017-01-24.txt Journal
+ls
+```
+
+```
+Code
+Documents
+Journal
+Photos
+Desktop
+Music
+echo-out.txt
+todo.txt
+```
+
+Looks like it worked! I just realized however that I want to move the `Journal`
+directory into the `Documents` folder. Thankfully we can do this with `mv` in
+the same way:
+
+```{r, engine='bash', eval=FALSE}
+mv Journal Documents
+ls
+```
+
+```
+Code
+Documents
+Photos
+Desktop
+Music
+echo-out.txt
+todo.txt
+```
+
+Let's just make sure it ended up in the right place:
+
+```{r, engine='bash', eval=FALSE}
+ls Documents
+```
+
+```
+Journal
+a-tale-of-two-cities.txt
+```
+
+Looks good! Another hidden use of the `mv` command is that you can use it to
+rename files and folders. The first argument is the path to the folder or file
+that you want to rename, and the second argument is a path with the new name
+for the file or folder. Let's rename `todo.txt` so it includes today's date:
+
+```{r, engine='bash', eval=FALSE}
+mv todo.txt todo-2017-01-24.txt
+ls
+```
+
+```
+Code
+Documents
+Photos
+Desktop
+Music
+echo-out.txt
+todo-2017-01-24.txt
+```
+
+Looks like it worked nicely. Similar to the `mv` command, the `cp` command
+**c**o**p**ies a file or folder from one location to another. As you can see `cp` is
+used exactly like `mv` when copying files, the file or folder you wish to copy
+is the first argument, followed by the patht to the folder where you want the
+copy to be made:
+
+```{r, engine='bash', eval=FALSE}
+cp echo-out.txt Desktop
+ls
+```
+
+```
+Code
+Documents
+Photos
+Desktop
+Music
+echo-out.txt
+todo-2017-01-24.txt
+```
+
+```{r, engine='bash', eval=FALSE}
+ls Desktop
+```
+
+```
+echo-out.txt
+```
+
+Be aware that there is one difference between copying files and folders, when
+copying folders you need to specify the `-r` option, which is short for
+*recursive*. This ensures that the underlying directorty structure of the
+directory you wish to copy remains intact. Let's try copying my `Documents`
+directory into the `Desktop` directory:
+
+```{r, engine='bash', eval=FALSE}
+cp -r Documents Desktop
+ls Desktop
+```
+
+```
+Documents
+echo-out.txt
+```
+
+Finally, let's discuss how to delete files and folders with the command line.
+**A word of extreme caution:** in general I don't recommend deleting files or
+folders on the command line because as we've discussed before there is 
+***no undo button*** on the command line. If you delete a file that is critical
+to your computer functioning you may cause irreperable damage. I *highly* 
+recommend moving files or folders to a designated trash folder and then deleting
+them the way you would normally delete files and folders outside of the command
+line (The path to the Trash Bin on Mac is `~/.Trash`).
+
+TODO: find where trash is on ubuntu
+
+If you decide to delete 
+a file or folder on your computer make absolutely
+sure that the command you've typed is correct before you press `Enter`. If you do
+delete a file or folder by accident stop using your computer immediately and
+consult with a computer professional or your IT department so they can try to
+recover the file.
+
+Now that you've been warned, let's discuss `rm`, the
+[Avada Kedavra](http://en.wikipedia.org/wiki/List_of_spells_in_Harry_Potter)
+of command line programs. When **r**e**m**oving files `rm` only requires the path to a
+file in order to delete it. Let's test its destructive power on `echo-out.txt`:
+
+```{r, engine='bash', eval=FALSE}
+rm echo-out.txt
+ls
+```
+
+```
+Code
+Documents
+Photos
+Desktop
+Music
+todo-2017-01-24.txt
+```
+
+TODO: insert obi wan quote about alderaan being blown up
+
+The file `echo-out.txt` is gone forever. Remember when we copied the entire
+`Documents` directory into `Desktop`? Let's get rid of that directory now. Just
+like when we were using `cp` the `rm` command requires you to use the `-r`
+option when deleting entire directories. Let's test this battle station:
+
+```{r, engine='bash', eval=FALSE}
+ls Desktop
+```
+
+```
+Documents
+echo-out.txt
+```
+
+```{r, engine='bash', eval=FALSE}
+rm -r Desktop/Documents
+ls Desktop
+```
+
+```
+echo-out.txt
+```
+
+Now that the awesome destructive power of `rm` is on your side, you've leared
+the basics of the command line! See you in the next chapter for a discussion of
+more advanced command line topics.
+
+### Summary
+
+- `mv` can be used for moving or renaming files or folders.
+- `cp` can copy files or folders.
+- You should try to aviod using `rm` which permanently removes files or folders.
+
+### Exercises
+
+1. Create a file called `message.txt` in your home directory and move it into
+another directory.
+2. Copy the `message.txt` you just moved into your home directory.
+3. Delete both copies of `message.txt`. Try to do this without using `rm`.
